@@ -31,6 +31,8 @@ First some initial setup code:
     ('portal_type', 'review_state')
     >>> config.filter_queries
     ('portal_type',)
+    >>> config.slow_query_threshold
+    0
 
 
 Viewing the site control panel
@@ -78,6 +80,7 @@ Make some changes
     >>> self.browser.getControl(name='form.required.1.').value = 'bar'
     >>> self.browser.getControl(name='form.facets.0.').value = 'type'
     >>> self.browser.getControl(name='form.facets.1.').value = 'state'
+    >>> self.browser.getControl(name='form.slow_query_threshold').value = '50'
 
 Filter query parameters cannot be specified until the connection has been
 activated.  At the moment only the already configured value shows up:
@@ -120,6 +123,8 @@ Make sure the changes have been applied correctly to the tool:
     [u'foo', u'bar']
     >>> config.facets
     [u'type', u'state']
+    >>> config.slow_query_threshold
+    50
 
 Now that the connection is active we can also select more filter query
 parameters from the complete list of Solr indexes, provided that we use the
