@@ -23,6 +23,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         config.required = ('foo', 'bar')
         config.facets = ('type', 'state')
         config.filter_queries = ('type',)
+        config.slow_query_threshold = 2342
 
     def testImportStep(self):
         profile = 'profile-collective.solr:default'
@@ -44,6 +45,7 @@ class SetupToolTests(SolrTestCase, TarballTester):
         self.assertEqual(config.required, ('SearchableText', ))
         self.assertEqual(config.facets, ('portal_type', 'review_state'))
         self.assertEqual(config.filter_queries, ('portal_type',))
+        self.assertEqual(config.slow_query_threshold, 0)
 
     def testExportStep(self):
         tool = self.portal.portal_setup
@@ -102,6 +104,7 @@ SOLR_XML = """\
     <filter-query-parameters>
       <parameter name="type" />
     </filter-query-parameters>
+    <slow-query-threshold value="2342" />
   </settings>
 </object>
 """
